Thu Sep  9 07:16:02 2004  J.T. Conklin  <jtc@acorntoolworks.com>

	* orbsvcs/orbsvcs/DsLogAdmin.mpc:
	* orbsvcs/orbsvcs/DsNotifyLogAdmin.mpc:

	  Updated inheritance.

Thu Sep  9 07:05:20 2004  J.T. Conklin  <jtc@acorntoolworks.com>

	* orbsvcs/tests/Notify/lib/Notify_lib.mpc:

	  Changed to inherit from notification_skel.

Thu Sep  9 06:46:00 2004  J.T. Conklin  <jtc@acorntoolworks.com>

	* orbsvcs/orbsvcs/CosNotification.mpc:

	  Changed CosNotification_Skel project to inherit from event_skel.

Thu Sep  9 06:15:38 2004  J.T. Conklin  <jtc@acorntoolworks.com>

	* orbsvcs/FT_ReplicationManager/FT_ReplicationManager.mpc:

	  Updated library project to inherit from naming_skel.

Thu Sep  9 05:49:49 2004  J.T. Conklin  <jtc@acorntoolworks.com>

	* orbsvcs/Concurrency_Service/Makefile.am:
	* orbsvcs/CosEvent_Service/Makefile.am:
	* orbsvcs/Dump_Schedule/Makefile.am:
	* orbsvcs/Event_Service/Makefile.am:
	* orbsvcs/FTRT_Event_Service/Event_Service/Makefile.am:
	* orbsvcs/FTRT_Event_Service/Factory_Service/Makefile.am:
	* orbsvcs/FTRT_Event_Service/Gateway_Service/Makefile.am:
	* orbsvcs/FT_ReplicationManager/Makefile.am:
	* orbsvcs/Fault_Detector/Makefile.am:
	* orbsvcs/Fault_Notifier/Makefile.am:
	* orbsvcs/IFR_Service/Makefile.am:
	* orbsvcs/LifeCycle_Service/Makefile.am:
	* orbsvcs/LoadBalancer/Makefile.am:
	* orbsvcs/Logging_Service/Basic_Logging_Service/Makefile.am:
	* orbsvcs/Logging_Service/Event_Logging_Service/Makefile.am:
	* orbsvcs/Logging_Service/Notify_Logging_Service/Makefile.am:
	* orbsvcs/Logging_Service/RTEvent_Logging_Service/Makefile.am:
	* orbsvcs/Naming_Service/Makefile.am:
	* orbsvcs/Notify_Service/Makefile.am:
	* orbsvcs/Scheduling_Service/Makefile.am:
	* orbsvcs/Time_Service/Makefile.am:
	* orbsvcs/Trading_Service/Makefile.am:
	* orbsvcs/orbsvcs/Makefile.am:

	  Updated for orbsvcs library refactor.

Thu Sep  9 05:08:57 2004  J.T. Conklin  <jtc@acorntoolworks.com>

	* orbsvcs/orbsvcs/CosEvent.mpc:
	* orbsvcs/orbsvcs/PortableGroup.mpc: